# photo-video-organizer

./: .gitignore  Cargo.toml  LICENSE  README.md
assets/: icon.ico:Zone.Identifier
docs/: CHANGELOG.md  CONTRIBUTING.md  DESIGN.md  ICON_EMBEDDING.md
src/: main.rs
src/core/: date_utils.rs  mod.rs  organizer.rs  scanner.rs  types.rs
src/ui/: app.rs
