[package]
name = "photo-video-organizer"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.33"
image = "0.25"
kamadak-exif = "0.6"
walkdir = "2.5"
chrono = "0.4"
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11"
anyhow = "1.0"
filetime = "0.2"
directories = "5.0"

# CLI dependencies
clap = { version = "4.4", features = ["derive"] }
simple_logger = "4.3"

# Optional for performance but good to have
rayon = "1.10"
rfd = "0.16.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
